Safari is failing to remove SQLite Databases via Remove All Website Data https://bugs.webkit.org/show_bug.cgi?id=147584 rdar://problem/22095006

Reviewed by Brady Eidson.

If we end up deleting every single database for an origin, make sure to also delete the origin.

* Modules/webdatabase/DatabaseTracker.cpp:
(WebCore::DatabaseTracker::deleteDatabasesModifiedSince):

Canonical link: https://commits.webkit.org/165639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187758 268f45cc-cd09-0410-ab3c-d52691b4dbfc